tests/examples/errors/WrongArgument.hkf
module exporting ()

layer foo:
| *_ => []

alias bar = foo ["a"] -- Layers take in chords, not sequences 
